# conway_gol

./: .gitignore  Cargo.toml  README.md
gol/: Cargo.toml
gol/benches/: benchmarks.rs
gol/src/: grid.rs  lib.rs  neigh.rs  render.rs
src/: main.rs
