[package]
name = "gol"
version = "0.1.0"
authors = ["Valink16 <valuthyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = "0.34.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "benchmarks"
harness = false
